...
                                checkFavorite(coinData: coin)
                            } label: {
                                Image(systemName: Images.favorites)
                            }
                            .tint(StorageManager.shared.isCoinFavorite(coinInfo.code ?? "") ? .red : .green)
                        }
                        .accessibilityIdentifier("coinView")
                    }
                }
                if viewModel.isLoading {
                    ProgressView()
                }
            }
...
