appId: com.adesso.SampleAppSwiftUI.development
---
- launchApp
- tapOn:
    id: "coinView"
- assertVisible: "1D"
- assertVisible: "1W"
- assertVisible: "6M"
